header, content, tabs, router

--- a/src/features/headerMenu/headerMenu.css
+++ b/src/features/headerMenu/headerMenu.css
@@ -1,7 +1,25 @@
 .header__menu {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 70px;
-    background: #192230;
+}
+
+.header__buttons-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    list-style-type: none;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    padding-left: 0;
+    width: 60%;
+}
+
+
+.header__decorLine {
+    height: 2px;
+    background-color: black;
+    width: 60%;
 }
