--- a/src/components/menuButton/menuButton.css
+++ b/src/components/menuButton/menuButton.css
@@ -1,19 +1,64 @@
 .menu__button {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 180px;
-    height: 35px;
-    background: #CADFFF;
-    border-radius: 15px;
-    outline: 0;
-    font-size: 20px;
+    justify-content: center;
+    width:100%;
+    height:100%;
     margin-left: 20px;
     margin-right: 20px;
-    border: 4px solid #CADFFF;
+    background-color: transparent;
+    border: 0;
+    outline: none;
+}
+
+.header__menu-button {
+    height: 50px;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 
-.menu__button-active {
-    border: 4px solid #FFFFFF;
+@keyframes bounceIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(.3);
+        -ms-transform: scale(.3);
+        transform: scale(.3);
+    }
+
+    50% {
+        opacity: 1;
+        -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+        transform: scale(1.05);
+    }
+
+    70% {
+        -webkit-transform: scale(.9);
+        -ms-transform: scale(.9);
+        transform: scale(.9);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        -ms-transform: scale(1);
+        transform: scale(1);
+    }
 }
+
+.menu__button-active::after {
+    display: block;
+    position: absolute;
+    top: 75px;
+    border-radius: 10px;
+    content: '';
+    height: 10px;
+    width: 10px;
+    background-color: black;
+    animation: bounceIn 0.3s ;
+}
+
