--- a/src/features/headerMenu/headerMenu.css
+++ b/src/features/headerMenu/headerMenu.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: -4px 15px 31px -29px rgba(0, 0, 0, 0.25);;
 }
 
 .header__buttons-list {
